--- a/index.html
+++ b/index.html
@@ -297,23 +297,23 @@
                 <!-- Social Links Container -->
                 <div class="flex justify-center space-x-4">
                     <!-- Link #1 -->
-                    <a href="">
+                    <a href="#">
                         <img src="./img/icon-facebook.svg" class="h-8" alt="">
                     </a>
                     <!-- Link #4 -->
-                    <a href="">
+                    <a href="#">
                         <img src="./img/icon-youtube.svg" class="h-8" alt="">
                     </a>
                     <!-- Link #3 -->
-                    <a href="">
+                    <a href="#">
                         <img src="./img/icon-twitter.svg" class="h-8" alt="">
                     </a>
                     <!-- Link #4 -->
-                    <a href="">
+                    <a href="#">
                         <img src="./img/icon-pinterest.svg" class="h-8" alt="">
                     </a>
                     <!-- Link #5 -->
-                    <a href="">
+                    <a href="#">
                         <img src="./img/icon-instagram.svg" class="h-8" alt="">
                     </a>
 
